tests/e2e/semantics/mutation/int_round.error
Error: syntax error in story at line 2, column 7

2|    b = a.round()
            ^^^^^

E0117: Invalid mutation `round`
