tests/e2e/semantics/mutation/int_round.story
a = 1
b = a.round()
